# code2docs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  Taskfile.yml  app.doql.css  goal.yaml  mkdocs.yml  planfile.yaml  project.sh  pyproject.toml  pyqual.yaml  redsl_refactor_report.md  redsl_refactor_report.toon.yaml
.pyqual/: pipeline.db  ruff.json
code2docs/: CONTRIBUTING.md  README.md  __init__.py  cli.py  config.py  registry.py
code2docs/analyzers/: __init__.py  dependency_scanner.py  docstring_extractor.py  endpoint_detector.py  markdown_validator.py  project_scanner.py
code2docs/docs/: api-changelog.md  api.md  architecture.md  configuration.md  coverage.md  dependency-graph.md  getting-started.md  modules.md
code2docs/docs/api/: index.md  module___main__.md  module_analyzers.md  module_analyzers_dependency_scanner.md  module_analyzers_docstring_extractor.md  module_analyzers_endpoint_detector.md  module_analyzers_project_scanner.md  module_base.md  module_cli.md  module_code2docs.md  module_config.md  module_formatters.md  module_formatters_badges.md  module_formatters_markdown.md  module_formatters_toc.md  module_generators.md  module_generators__registry_adapters.md  module_generators_api_changelog_gen.md  module_generators_api_reference_gen.md  module_generators_architecture_gen.md  module_generators_changelog_gen.md  module_generators_coverage_gen.md  module_generators_depgraph_gen.md  module_generators_examples_gen.md  module_generators_mkdocs_gen.md  module_generators_module_docs_gen.md  module_generators_readme_gen.md  module_registry.md  module_sync.md  module_sync_differ.md  module_sync_updater.md  module_sync_watcher.md
code2docs/docs/modules/: __main__.md  analyzers.md  analyzers_dependency_scanner.md  analyzers_docstring_extractor.md  analyzers_endpoint_detector.md  analyzers_project_scanner.md  base.md  cli.md  code2docs.md  config.md  formatters.md  formatters_badges.md  formatters_markdown.md  formatters_toc.md  generators.md  generators__registry_adapters.md  generators_api_changelog_gen.md  generators_api_reference_gen.md  generators_architecture_gen.md  generators_changelog_gen.md  generators_coverage_gen.md  generators_depgraph_gen.md  generators_examples_gen.md  generators_mkdocs_gen.md  generators_module_docs_gen.md  generators_readme_gen.md  registry.md  sync.md  sync_differ.md  sync_updater.md  sync_watcher.md
code2docs/examples/: advanced_usage.py  basic_usage.py  class_examples.py  entry_points.py
code2docs/formatters/: __init__.py  badges.py  markdown.py  toc.py
code2docs/generators/: __init__.py  _registry_adapters.py  _source_links.py  api_reference_gen.py  architecture_gen.py  changelog_gen.py  code2llm_gen.py  config_docs_gen.py  contributing_gen.py  coverage_gen.py  depgraph_gen.py  examples_gen.py  getting_started_gen.py  mkdocs_gen.py  module_docs_gen.py  org_readme_gen.py  readme_gen.py
code2docs/project/: README.md  analysis.json  analysis.toon  analysis.yaml  calls.mmd  compact_flow.mmd  context.md  dashboard.html  evolution.toon  flow.mmd  flow.toon  map.toon  project.toon  project.yaml  prompt.txt
code2docs/sync/: __init__.py  differ.py  updater.py  watcher.py
code2docs/templates/: api_module.md.j2  architecture.md.j2  example_usage.py.j2  index.md.j2  module_doc.md.j2  readme.md.j2
docs/: CONTRIBUTING.md  README.md  api-changelog.md  api.md  architecture.md  configuration.md  coverage.md  dependency-graph.md  getting-started.md  index.html  modules.md
docs/examples/: advanced_usage.py  quickstart.py
examples/: 03_programmatic_api.py  04_sync_and_watch.py  05_custom_generators.py  06_formatters.py  README.md  advanced_usage.py  basic_usage.py  class_examples.py  quickstart.py
project/: README.md  analysis.json  analysis.toon  analysis.toon.yaml  analysis.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  dashboard.html  duplication.toon.yaml  evolution.toon  evolution.toon.yaml  flow.mmd  flow.toon  index.html  map.toon  map.toon.yaml  project.toon  project.toon.yaml  project.yaml  prompt.txt  validation.toon.yaml
tests/: test_analyzers.py  test_cli.py  test_config.py  test_formatters.py  test_generators.py  test_llm_helper.py  test_markdown_validator.py  test_registry.py  test_sync.py
tests/project/: README.md  analysis.json  analysis.toon  analysis.yaml  calls.mmd  context.md  dashboard.html  evolution.toon  flow.mmd  flow.toon  map.toon  project.toon  project.yaml  prompt.txt
